test is passing

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,7 @@
 language: "node_js"
 node_js: "12"
+before_script:
+  - npm i eslint esm jsdom
+script:
+  - npx eslint .
+  - npx qunit public/test/index.js
